[package]
name = "rucl"
authors = ["Pau de la Cuesta"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rucl"
path = "src/lib/mod.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
url = "2.4.1"
hickory-resolver = { version = "*", features = ["tokio-runtime"] }
tokio = { version = "1.21", features = ["full"] }
thiserror = "1.0.50"
tokio-native-tls = "0.3.1"
dotenv = "0.15.0"
colored = "2.0.4"
env_logger = "0.10.0"
log = "0.4.20"
